<resources>
    <string name="app_name">伴读</string>
    <string name="action_settings">Settings</string>

    <string name="MainActivity_title_edit">编辑</string>
    <string name="MainActivity_title_about">我的</string>

    <string name="PhotoActivity_action_wallpaper">设为壁纸</string>

    <string name="VideoFragment_label_developing">正在开发中</string>

    <string name="MyFragment_label_nickname">正在开发中</string>
    <string name="MyFragment_label_number">X 4</string>

    <string name="ExchangeAcitity_title">本周已累计阅读时长</string>
    <string name="ExchangeAcitity_time">194 分钟</string>
    <string name="ExchangeAcitity_info">每累计半小时可兑换随机地瓜干，阅读时长越长地瓜干数依次递增</string>


    <string name="AboutFragment_label_nickname">刘子川、李彦佳、刘佳迎</string>
    <string name="AboutFragment_desc_introduction">武汉理工大学，Android 开发</string>
    <string name="AboutFragment_label_grade">评分</string>
    <string name="AboutFragment_label_contact_me">联系我</string>
    <string name="AboutFragment_label_help">帮助</string>
    <string name="AboutFragment_label_setting">设置</string>
    <string name="AboutFragment_label_check_update">检查更新</string>

    <string name="PhotoActivity_toast_success">设置壁纸成功</string>
    <string name="PhotoActivity_dialog_msg">保存图片</string>


    <string name="read_setting_directory">目录</string>
    <string name="read_setting_night">夜间</string>
    <string name="read_setting_day">日间</string>
    <string name="read_setting_pagemode">翻页</string>
    <string name="read_setting_set">设置</string>
    <string name="read_setting_pre">上一章</string>
    <string name="read_setting_next">下一章</string>
</resources>
