<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/fragment_about"
    android:layout_height="match_parent" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/title_shape">
        <!--一个是显示返回键，一个是显示标题框-->
        <!--通过TextView来显示，id ： tv_back , tv_main_title -->
        <Button
            android:id="@+id/tv_back"
            android:layout_width="50dp"
            android:layout_marginTop="5dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/go_back_selector" />
        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:text="设 置"
            android:textSize="20sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card"
        android:layout_marginTop="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:src="@mipmap/avatar" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_avatar"
            android:layout_toEndOf="@id/iv_avatar"
            android:layout_toRightOf="@id/iv_avatar"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:text="@string/AboutFragment_label_nickname"
            android:textSize="@dimen/font_size_normal_high"
            android:textColor="@color/gray_dark"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/tv_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_avatar"
            android:layout_toRightOf="@id/iv_avatar"
            android:layout_alignBottom="@id/iv_avatar"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:text="@string/AboutFragment_desc_introduction"
            android:textSize="@dimen/font_size_small"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:id="@+id/grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bottom_line">

            <TextView
                android:id="@+id/tv_grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/AboutFragment_label_grade"
                android:textSize="@dimen/font_size_normal_high"
                android:textColor="@color/gray_dark"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/AboutFragment_label_contact_me"
                android:textSize="@dimen/font_size_normal_high"
                android:textColor="@color/gray_dark"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/AboutFragment_label_help"
                android:textSize="@dimen/font_size_normal_high"
                android:textColor="@color/gray_dark"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/AboutFragment_label_setting"
                android:textSize="@dimen/font_size_normal_high"
                android:textColor="@color/gray_dark"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/check_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/AboutFragment_label_check_update"
                android:textSize="@dimen/font_size_normal_high"
                android:textColor="@color/gray_dark"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/ic_arrow_right"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_shape"
        android:text="退 出"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

</LinearLayout>